# omlx

./: AGENTS.md  pyproject.toml  setup.py
apps/omlx-mac/Sources/AppView/Screens/: QuantizationScreen.swift
apps/omlx-mac/Sources/Net/: OMLXClient.swift
apps/omlx-mac/Sources/Server/: PythonRuntime.swift
docs/: architecture-zh.md  compile-install-guide.md  hermes-omlx-local-optimization-tracker.md  oQ_Quantization.md  omlx-11335-model-cycle-memory-leak-report-zh.md  omlx-memory-cycle-retest-plan-zh.md  omlx-memory-retention-investigation-zh.md
omlx/: engine_core.py  engine_pool.py  exceptions.py  model_discovery.py  oq.py  process_memory_enforcer.py  scheduler.py  server.py  settings.py
omlx/adapter/: output_parser.py
omlx/admin/: oq_manager.py  routes.py
omlx/admin/i18n/: en.json  es.json  fr.json  ja.json  ko.json  pt-BR.json  ru.json  zh-TW.json  zh.json
omlx/admin/static/css/: tailwind.css
omlx/admin/static/js/: dashboard.js
omlx/admin/templates/dashboard/: _models.html  _settings.html
omlx/api/: markitdown.py  markitdown_pdf_fallback.py
omlx/cache/: boundary_snapshot_store.py  paged_ssd_cache.py  type_handlers.py  type_registry.py
omlx/custom_kernels/common/csrc/kernels/: quantized_moe.h  steel_attention_block_token.h
omlx/custom_kernels/glm_moe_dsa/: fast.py
omlx/custom_kernels/glm_moe_dsa/csrc/: CMakeLists.txt  bindings.cpp  deepseek_moe.metal  deepseek_v4_sparse_attention.cpp  deepseek_v4_sparse_attention.h  deepseek_v4_sparse_attention.metal  dsa_indexer.cpp  dsa_indexer.metal  fused_moe.cpp  fused_moe.h  fused_moe.metal
omlx/custom_kernels/glm_moe_dsa/csrc/kernels/: steel_deepseek_v4_sparse_attention.h
omlx/custom_kernels/glm_moe_dsa/csrc/mlx/backend/metal/kernels/steel/attn/: params.h
omlx/custom_kernels/minimax_m3/: fast.py
omlx/custom_kernels/qwen35_prefill/: __init__.py  fast.py  gdn.py
omlx/custom_kernels/qwen35_prefill/csrc/: CMakeLists.txt  bindings.cpp  qwen35_attention.metal  qwen35_prefill.cpp  qwen35_prefill.h  qwen35_qmm.metal
omlx/engine/: base.py  batched.py  dflash.py  embedding.py  reranker.py  sts.py  stt.py  tts.py  vlm.py
omlx/models/: embedding.py  llm.py  reranker.py
omlx/patches/: qwen35_fa256_attention.py  qwen35_gdn_chunked.py  qwen35_moe_weighted_sum.py  qwen35_q4_mlp.py
omlx/patches/deepseek_v4/: deepseek_v4_model.py  switch_layers.py
omlx/patches/glm_moe_dsa/: glm_moe_dsa_model.py  kernels.py
omlx/patches/mlx_lm_mtp/: qwen35_model.py
omlx/patches/mlx_vlm_mtp/: qwen35_moe_vlm_model.py  qwen35_moe_vlm_runtime.py
omlx/speculative/: vlm_mtp.py
omlx/utils/: model_loading.py  proc_memory.py  tokenizer.py
packaging/: build.py
scripts/: omlx_memory_cycle_probe.py  replay_anthropic_payload.py  start-omlx-app-config.sh
tests/: test_admin_hot_cache_clear.py  test_audio_discovery.py  test_audio_tts.py  test_batched_engine.py  test_boundary_snapshot_store.py  test_cache_type_handlers.py  test_chat_stream_thinking_static.py  test_deepseek_v4_patch.py  test_embedding.py  test_engine_core.py  test_engine_pool.py  test_glm_moe_dsa_patch.py  test_markitdown_integration.py  test_mlx_lm_mtp_patch.py  test_model_loading.py  test_native_import_error_tracebacks.py  test_oq.py  test_oq_manager.py  test_output_parser.py  test_paged_ssd_cache.py  test_prefix_cache_rotating_tip_strip.py  test_proc_memory.py  test_process_memory_enforcer.py  test_qwen35_fa256_attention.py  test_qwen35_gdn_prefill.py  test_qwen35_moe_weighted_sum.py  test_qwen35_q4_mlp.py  test_reranker_causal_lm.py  test_scheduler.py  test_scheduler_prompt_boundary_store.py  test_server.py  test_settings.py  test_utils_tokenizer.py  test_vlm_engine.py  test_vlm_mtp.py
tests/integration/: test_e2e_streaming.py  test_server_endpoints.py
